Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
The S3 region resolver caches a S3 client at module scope. This client can be destroyed very late and trigger an assertion error in the AWS SDK because it was already shutdown:
https://github.com/aws/aws-sdk-cpp/issues/2204
When explicitly finalizing S3, we should ensure we also destroy the cached S3 client.
Attachments
Issue Links
- links to