ARROW-18397: [C++] Clear S3 region resolver client at S3 shutdown

This should hopefully suppress a failed assertion on recent AWS SDK versions.

See https://github.com/aws/aws-sdk-cpp/issues/2204 for upstream issue report.